Fixed about 980px-1013px: misalignment 3 Listings per row and portlet

--- a/src/ps/diazo/realia/diazo_resources/less/realia-base.less
+++ b/src/ps/diazo/realia/diazo_resources/less/realia-base.less
@@ -2952,6 +2952,10 @@ table.accordion_table th{
     }
 }
 @media (max-width:1023px) and (min-width:980px){
+    .portlet-right .listing-collection-tile .collection-item.tileItem,
+    .portlet-left .listing-collection-tile .collection-item.tileItem{
+        width: 48%;
+    }
     .skypecontacts #header-wrapper #header #header-inner .navbar .navbar-inner .site-email a,
     .skypecontacts #header-wrapper #header #header-inner .navbar .navbar-inner .site-phone a,
     .skypecontacts .skype_contacts span {
